# gandalf

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gandalf_1.conf  gandalf_3.conf  gandolf_1.conf  gandolf_2.conf  gandolf_3.conf
gandalf-consensus/: Cargo.toml  build.rs
gandalf-consensus/src/: parser.rs  server.rs  tracker.rs
gandalf-consensus/src/client/kvs/: mod.rs  parser.rs  tracker.rs
gandalf-consensus/src/state_machine/: follower.rs  mod.rs
gandalf-consensus/tests/: kvs_client_read.rs  kvs_client_write.rs  kvs_election.rs  kvs_replication.rs  kvs_snapshot.rs
gandalf-consensus/tests/fixtures/: common.rs  kvs_helpers.rs  mod.rs
gandalf-kvs/: Cargo.toml  Dockerfile
gandalf-kvs/src/: command.rs  connection.rs  db.rs  frame.rs
gandolf-consensus/: Cargo.toml  build.rs
gandolf-consensus/proto/: gandolf.proto
gandolf-consensus/src/: lib.rs  parser.rs  raft.rs  rpc.rs  server.rs  tracker.rs
gandolf-consensus/src/client/kvs/: mod.rs  parser.rs  tracker.rs
gandolf-consensus/src/state_machine/: candidate.rs  follower.rs  leader.rs
gandolf-consensus/tests/: fixtures.rs  integeration_test.rs  kvs_client_read.rs  kvs_client_write.rs  kvs_election.rs  kvs_replication.rs  kvs_snapshot.rs
gandolf-consensus/tests/fixtures/: kvs_helpers.rs
gandolf-kvs/: Cargo.toml  Dockerfile
gandolf-kvs/src/: client.rs  command.rs  db.rs  frame.rs  lib.rs  parse.rs  server.rs  shutdown.rs
kvs/: Cargo.toml
kvs/src/: command.rs  connection.rs  db.rs  frame.rs  lib.rs  parse.rs  server.rs
