[package]
name = "gandalf-consensus"
version = "1.0.0"
authors = ["shayandesh <shayandesh@gmail.com>"]
edition = "2018"
repository = "https://github.com/NothingRealm/gandalf"
license = "GPL-3.0-or-later"
description = """ 
An implemention of raft to bring any database with consensus
"""

[[bin]]
name = "gandalf"
path = "src/bin/gandalf.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3.22"
tracing = "0.1"
tracing-subscriber = "0.2"
bytes = "1"
atoi = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.4"
gandalf-kvs = "1.0.0"

tonic = "0.5.1"
prost = "0.8"

serde = "1.0.129"
serde_json = "1.0.59"
serde_yaml = "0.8"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

