[package]
name = "gandalf-kvs"
version = "1.0.0"
authors = ["shayandesh <shayandesh@gmail.com>"]
edition = "2018"
repository = "https://github.com/NothingRealm/gandalf/kvs"
license = "GPL-3.0-or-later"
description = """ 
A key value stroe used in gandalf consensus system
"""

[[bin]]
name = "gandalf-kvs-server"
path = "src/bin/server.rs"

[[bin]]
name = "gandalf-kvs"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3.22"
tracing = "0.1"
tracing-subscriber = "0.2"
bytes = { version = "1", features = ["serde"] }
atoi = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0.129", features = ["derive"]}
serde_bytes = "0.11.5"
async-recursion = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }


