[package]
name = "gandolf-consensus"
version = "0.1.0"
authors = ["shayandesh <shayandesh@gmail.com>"]
edition = "2018"

[[bin]]
name = "gandolf"
path = "src/bin/gandolf.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3.22"
tracing = "0.1"
tracing-subscriber = "0.2"
bytes = "1"
atoi = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.4"
gandolf-kvs = { path = "../gandolf-kvs" }

tonic = "0.5.1"
prost = "0.8"

serde = "1.0.129"
serde_json = "1.0.59"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

